# combat

./: .cproject  .project  CHANGES  INSTALL  LICENSE  MakeVars.in  Makefile.in  PORTING  README  README.md  any.cc  combat.cc  combat.h  configure  configure.in  defines-generic.h  defines-mico.h  defines-orbacus.h  defines-orbix.h  defines-tao.h  event-corba.cc  event-mico.cc  idl2tcl.in  iordump  ir.cc  mico-binder.cc  mico-binder.h  pkgIndex.tcl  pseudo.cc  request.cc  skel.cc  tclAppInit.c  tclmap.h  test-MakeRules  test-server.h  typecode.cc
demo/: Makefile  README
demo/account/: Makefile  account  client.tcl  server.cc  server.tcl  test.idl  test.tcl
demo/hello-1/: Makefile  client.tcl  hello  server.cc  server.tcl  test.tcl
demo/random/: Makefile  README  Random.tcl  random
doc/: Makefile  combat.ltx
test/: Makefile  defs
test/1/: dotest  server.cc  server.tcl  test.tcl
test/10/: dotest  server.cc  server.tcl  test.tcl
test/11/: dotest  server.tcl  test.tcl
test/2/: dotest  server.cc  server.tcl  test.tcl
test/3/: dotest  server.cc  server.tcl  test.tcl
test/4/: dotest  server.cc
test/5/: dotest  server.cc  server.tcl  test.tcl
test/6/: dotest  server.cc  server.tcl  test.tcl
test/7/: server.tcl
test/8/: dotest  server.tcl
test/9/: CosNaming.tcl  dotest  server.cc  server.tcl  test.tcl
